force-app/main/default/objects/NotionWidgetFilter__mdt/NotionWidgetFilter__mdt.object-meta.xml
<CustomObject>
    <description>Filter conditions for Notion widgets, supporting both static values and context record field values</description>
    <label>Notion Widget Filter</label>
    <pluralLabel>Notion Widget Filters</pluralLabel>
</CustomObject>