force-app/main/default/objects/NotionWidgetFilter__mdt/fields/ContextSalesforceField__c.field-meta.xml
<CustomField>
    <fullName>ContextSalesforceField__c</fullName>
    <description>The Salesforce field API name to get the filter value from when Value Type is context_field (e.g., Id, Name)</description>
    <label>Context Salesforce Field</label>
    <length>255</length>
    <type>Text</type>
</CustomField>