force-app/main/default/objects/NotionWidgetFilter__mdt/fields/FilterOrder__c.field-meta.xml
<CustomField>
    <fullName>FilterOrder__c</fullName>
    <defaultValue>1</defaultValue>
    <description>The order in which filters are combined (1-based)</description>
    <label>Filter Order</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>