force-app/main/default/objects/NotionWidgetFilter__mdt/fields/LogicalOperator__c.field-meta.xml
<CustomField>
    <fullName>LogicalOperator__c</fullName>
    <description>The logical operator used to combine this filter with the previous filter</description>
    <label>Logical Operator</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>and</fullName>
                <default>true</default>
                <label>AND</label>
            </value>
            <value>
                <fullName>or</fullName>
                <label>OR</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>