force-app/main/default/objects/NotionWidgetFilter__mdt/fields/NotionWidget__c.field-meta.xml
<CustomField>
    <fullName>NotionWidget__c</fullName>
    <description>The parent widget configuration this filter belongs to</description>
    <label>Notion Widget</label>
    <referenceTo>NotionWidget__mdt</referenceTo>
    <relationshipLabel>Filters</relationshipLabel>
    <relationshipName>Filters</relationshipName>
    <required>true</required>
    <type>MetadataRelationship</type>
</CustomField>