force-app/main/default/objects/NotionWidgetFilter__mdt/fields/Operator__c.field-meta.xml
<CustomField>
    <fullName>Operator__c</fullName>
    <description>The filter operator to apply</description>
    <label>Operator</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>equals</fullName>
                <default>true</default>
                <label>Equals</label>
            </value>
            <value>
                <fullName>does_not_equal</fullName>
                <label>Does Not Equal</label>
            </value>
            <value>
                <fullName>contains</fullName>
                <label>Contains</label>
            </value>
            <value>
                <fullName>does_not_contain</fullName>
                <label>Does Not Contain</label>
            </value>
            <value>
                <fullName>starts_with</fullName>
                <label>Starts With</label>
            </value>
            <value>
                <fullName>ends_with</fullName>
                <label>Ends With</label>
            </value>
            <value>
                <fullName>greater_than</fullName>
                <label>Greater Than</label>
            </value>
            <value>
                <fullName>greater_than_or_equal_to</fullName>
                <label>Greater Than or Equal To</label>
            </value>
            <value>
                <fullName>less_than</fullName>
                <label>Less Than</label>
            </value>
            <value>
                <fullName>less_than_or_equal_to</fullName>
                <label>Less Than or Equal To</label>
            </value>
            <value>
                <fullName>is_empty</fullName>
                <label>Is Empty</label>
            </value>
            <value>
                <fullName>is_not_empty</fullName>
                <label>Is Not Empty</label>
            </value>
            <value>
                <fullName>before</fullName>
                <label>Before</label>
            </value>
            <value>
                <fullName>after</fullName>
                <label>After</label>
            </value>
            <value>
                <fullName>on_or_before</fullName>
                <label>On or Before</label>
            </value>
            <value>
                <fullName>on_or_after</fullName>
                <label>On or After</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>