force-app/main/default/objects/NotionWidgetFilter__mdt/fields/StaticValue__c.field-meta.xml
<CustomField>
    <fullName>StaticValue__c</fullName>
    <description>The static filter value when Value Type is static</description>
    <label>Static Value</label>
    <length>255</length>
    <type>Text</type>
</CustomField>