force-app/main/default/objects/NotionWidgetFilter__mdt/fields/ValueType__c.field-meta.xml
<CustomField>
    <fullName>ValueType__c</fullName>
    <description>Whether the filter value is a static value or comes from a context record field</description>
    <label>Value Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>static</fullName>
                <default>true</default>
                <label>Static Value</label>
            </value>
            <value>
                <fullName>context_field</fullName>
                <label>Context Record Field</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>